--- a/src/index.css
+++ b/src/index.css
@@ -100,3 +100,13 @@
 #root {
   display: contents;
 }
+
+.leaflet-container {
+  height: 100%;
+  width: 100%;
+}
+
+.leaflet-div-icon {
+  background: transparent;
+  border: none;
+}
